
* New Emacspeak Features:


** OCR Front-End:

Module emacspeak-ocr provides a convenient to use OCR
front-end for document scanning.
Uses SANE for image acquisition and can be configured to use
any available OCR engine.

** Speedch-enabled ECB:

ECB --Emacs Class Browser-- provides a powerful class
browser 
for aiding in software development using a variety of
languages including Java and Emacs Lisp.

** Semantic Support Within JDE

Uses knowledge computed by the semantic package in better
speech-enabling JDE.

** Speech-enabled browse-kill-ring

Module browse-kill-ring is speech-enabled.


** Easy Customization:

Most of Emacspeak user options are now available through
Emacs' customization interface.

** Enhanced widget support:

The speech-enabler for Emacs widgets has been completely
overhauled.
This results in better speech-enabling of packages like
custom and JDE.

** URL Templates 


New URL templates for Sourceforge, DDJ TechNetCast etc.

** Speech-enables ERC:

Enhanced with room monitors and the ability to hear things
said by specific people.

**Speech-enables ansi-color.el

Module ansi-color (bundled with Emacs 21)
colorizes process output according to ansi escape
sequences. Emacspeak 
maps these colors to appropriate ACSS style settings to
provide audio formatted output.

** Speech-enables MetaPost Mode:

metapost mode helps authoring and maintaining metapost
drawings.

** Convenience Commands:

All Emacspeak convenience commands have been moved to module
emacspeak-wizards.


** Key Bindings:

There is a new keymap emacspeak-personal-keymap
for user's personal keybindings --and available through
prefix key C-e x
To bind a command you would write 
(define-key emacspeak-personal-keymap "a"
'emacspeak-speak-other-window)

To accomodate this change, command emacspeak-view-register
is moved to C-e v
and command emacspeak-speak-version is moved to C-e V


Local variables:
 mode: outline
 paragraph-separate: "[ ]*$"
end:
